Configure data models

--- a/ClarityApp.API/appsettings.json
+++ b/ClarityApp.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DatabaseConnectionString": "Data source=clarityapp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
