Fix URLs, add TokenKey and use Cors

--- a/ClarityApp.API/appsettings.json
+++ b/ClarityApp.API/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DatabaseConnectionString": "Data source=clarityapp.db"
   },
+
+  "TokenKey": "y3WiXuGe4tAic7sIYRA9EmUdhT3dbjLM",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
