Fix client hydration and form value accessor errors

--- a/ClarityApp.API/appsettings.json
+++ b/ClarityApp.API/appsettings.json
@@ -3,7 +3,11 @@
     "DatabaseConnectionString": "Data source=clarityapp.db"
   },
 
-  "TokenKey": "y3WiXuGe4tAic7sIYRA9EmUdhT3dbjLM",
+  "Jwt": {
+    "TokenKey": "y3WiXuGe4tAic7sIYRA9EmUdhT3dbjLM",
+    "Issuer" : "http://localhost:5045",
+    "Audience" : "http://localhost:5045"
+  },
 
   "Logging": {
     "LogLevel": {
